--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 
     <header>
-        <h1>Your Name</h1>
+        <h1>Mzwakhe Obrey Mahaye</h1>
         <p>Aspiring Front-End Web Developer</p>
         <nav>
             <a href="index.html">Home</a>
