--- a/index.html
+++ b/index.html
@@ -24,6 +24,9 @@
         <h2>Welcome to My Portfolio</h2>
         <p>Explore my work and skills as a Front-End Web Developer.</p>
     </section>
+    <div class="center-container">
+    <a href="portfolio.html" class="btn">View Portfolio</a>
+    </div>
 
     <script src="script.js"></script>
 </body>
