--- a/portfolio.html
+++ b/portfolio.html
@@ -55,5 +55,21 @@
     100% { transform: rotate(360deg); }
   }
         </style>
+
+<footer>
+    <p>&copy; 2025 Mzwakhe Obrey Mahaye. All rights reserved.</p>
+</footer>
+
+<style>
+  footer {
+    background-color: #333;
+    color: white;
+    text-align: center;
+    padding: 10px 0;
+    position: fixed;
+    bottom: 0;
+    width: 100%;
+  }
+</style>
 </body>
 </html>
