--- a/index.html
+++ b/index.html
@@ -64,8 +64,8 @@
 <!--home page images-->
 <div class="slider-container">
     <div class="slider">
-        <img src="assets/image1.jpg" class="slide active" alt="First Image">
-        <img src="assets/image2.jpg" class="slide" alt="Second Image">
+        <img src="20241212_111919.jpg" class="slide active" alt="First Image">
+        <img src="jaap8h.jpg" class="slide" alt="Second Image">
     </div>
 
     <!-- Navigation Buttons -->
